# prelegal

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  catalog.json
.claude/: settings.json
backend/: pyproject.toml
backend/app/: config.py  database.py  deps.py  llm.py  main.py  models.py  schemas.py  templates.py
backend/app/routers/: auth.py  catalog.py  chat.py  health.py
backend/tests/: test_chat.py  test_templates.py
frontend/: package-lock.json  package.json
frontend/src/__tests__/: chat.test.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/[docType]/: DocCreatorClient.tsx  page.tsx
frontend/src/app/nda/: page.tsx
frontend/src/app/signin/: page.tsx
frontend/src/components/: ChatPanel.tsx  DocumentPreview.tsx  NDAForm.tsx  NDAPreview.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts  chat.ts  docApi.ts  docTypes.ts  template.ts  types.ts
scripts/: start-linux.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
templates/: LICENSE
